# testes-yolo-apk-android

./: .gitignore  README.md
apk-yolo-flutter/: .gitignore  pubspec.yaml
apk-yolo-flutter/docs/: BENCHMARK.md  OTIMIZACAO_INT8_GPU.md  benchmark_1779310803206.json  gerar_graficos.py
apk-yolo-flutter/docs/benchmarks-antigos/: benchmark_1778612127478.json
apk-yolo-flutter/example/: BENCHMARK_GUIDE.md  README.md  pubspec.yaml
apk-yolo-flutter/example/lib/: main.dart
apk-yolo-flutter/example/lib/config/: app_config.dart
apk-yolo-flutter/example/lib/models/: benchmark_model_result.dart  infraction_rule.dart  model_descriptor.dart  models.dart
apk-yolo-flutter/example/lib/presentation/controllers/: benchmark_controller.dart  camera_inference_controller.dart
apk-yolo-flutter/example/lib/presentation/screens/: batch_inference_screen.dart  benchmark_screen.dart  camera_inference_screen.dart  (+3 more)
apk-yolo-flutter/example/lib/services/: infraction_rules_storage.dart  infraction_service.dart  model_manager.dart  model_picker.dart  model_registry.dart  system_metrics_service.dart
apk-yolo-flutter/lib/: yolo_view.dart
apk-yolo-flutter/lib/widgets/: yolo_controller.dart
apk-yolo-flutter/test/: yolo_controller_test.dart
apk-yolo-flutter/test/utils/: test_helpers.dart
benchmarks-pc/: README.md  config.yaml  pyproject.toml  requirements.txt  run.py
benchmarks-pc/src/benchmarks_pc/: __init__.py  convert_model.py  inference_pc.py  io_helpers.py  layout.py  metrics_mobile.py  models_manifest.py  plots.py  run.py  settings.py
dados-validacao/EPI/: data.yaml
(+24 files in other folders)
